2010-07-01	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/UPGRADE, pf/conf/documentation.conf, pf/conf/pf.conf.defaults, 
	pf/conf/templates/configurator/reg-detect-vlan.conf, 
	pf/conf/templates/configurator/reg-vlan.conf, 
	pf/conf/templates/configurator/zen-vlan.conf, pf/configurator.pl:
	Added a new option under trapping.passthrough: disabled. By default 
	passthrough is now disabled and must be explicitly enabled. Fixes #886;
	- New note in UPGRADE about that change
	- Updated configuration templates for VLAN isolation mode
	- Added TODO tasks to improve configurator.pl
	http://www.packetfence.org/bugs/view.php?id=886

	* pf/configurator.pl: Clarified various templates available in the 
	configurator script. Also added a new one: VLAN isolation mode with 
	Registration. Fixes #975;
	http://www.packetfence.org/bugs/view.php?id=975

2010-06-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Fixes to routing
	documentation (missing pf_gateway). Fixes #998;
	http://www.packetfence.org/bugs/view.php?id=998

2010-06-25	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/SMC.pm 
	* pf/lib/pf/SNMP/SMC/SMC8800.pm 
	* pf/lib/pf/SNMP/SMC/TS6224M.pm: Added support for SMC8824M and SMC8848M
	TigerStack II with port-security. Moved some code between SMC modules.

2010-06-24	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/Cisco/Catalyst_4500.pm: Added support for 4500 Series 

2010-06-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm: Documented a bug with IOS 
	12.2(25r) and VoIP. Also filed as #1200 for reference.
	http://www.packetfence.org/bugs/view.php?id=1020

2010-06-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl: Using NAS-IP-Address, a 
	radius standard attribute, instead of Client-IP-Address as the switch IP
	address. Module now works with freeradius2. Fixes #1007;
	http://www.packetfence.org/bugs/view.php?id=1007
