@@ -84,6 +84,8 @@ HP Procurve 2500             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
 HP Procurve 2600             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
+HP Procurve 3400cl           |    XX    |    --    |    XX    |    ??    |
+-----------------------------|----------|----------|----------|----------|
 HP Procurve 4100             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
 Intel Express 460            |    XX    |    --    |    --    |    --    |
