@@ -109,6 +109,7 @@
                            'Foundry::FastIron_4802' => 'Foundry FastIron 4802',
                            'HP::Procurve_2500' => 'HP Procurve 2500',
                            'HP::Procurve_2600' => 'HP Procurve 2600',
+                           'HP::Procurve_3400cl' => 'HP Procurve 3400cl',
                            'HP::Procurve_4100' => 'HP Procurve 4100',
                            'Intel::Express_460' => 'Intel Express 460',
                            'Intel::Express_530' => 'Intel Express 530',
