@@ -26,7 +26,9 @@ New Hardware Support
 - Cisco Catalyst 4500 Series
 - Foundry FastIron 4802 Port security and Voice over IP support (feature 
   sponsored by an entity who preferred to remain anonymous)
-- SMC SMC8824M and SMC8848M in Port Security
+- HP Procurve 3400cl (tested by roelof)
+- SMC SMC8824M and SMC8848M in Port Security (feature sponsored by Seattle 
+  Pacific University developed with the help of SMC)
 
 New Features
 - Node category support, you can assign different VLANs or whitelist violations
