@@ -1,4 +1,11 @@
 2010-07-01	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/lib/pf/SNMP/HP/Procurve_3400cl.pm, pf/README_SWITCHES, 
+	pf/html/admin/configuration/switches_add.php,
+	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
+	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for HP Procurve
+	3400cl. Fixes #906;
+	http://www.packetfence.org/bugs/view.php?id=906
+
 	* pf/UPGRADE, pf/conf/documentation.conf, pf/conf/pf.conf.defaults, 
 	pf/conf/templates/configurator/reg-detect-vlan.conf, 
 	pf/conf/templates/configurator/reg-vlan.conf, 
